fix google map freezing, fix map infobox close button visibility

--- a/react/assets/forus-webshop/scss/_common/components/_map-card.scss
+++ b/react/assets/forus-webshop/scss/_common/components/_map-card.scss
@@ -81,7 +81,8 @@
         display: flex;
         top: 0;
         right: 0;
-        z-index: 1;
+        z-index: 5;
+        padding: 2px;
     }
 
     .gm-style-iw-c {
