--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-map-office-card.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-map-office-card.scss
@@ -36,6 +36,7 @@
             font: 700 14px/20px var(--base-font);
             color: #282b39;
             margin: 0 0 5px;
+            padding-right: 20px;
         }
 
         .map-office-info {
